--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -26,6 +26,7 @@
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
+        "react-toastify": "^11.0.5",
         "web-vitals": "^4.2.3",
         "yup": "^1.4.0"
     },
