--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -9,7 +9,9 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@emotion/react": "^11.10.6",
+        "@emotion/react": "^11.14.0",
+        "@mantine/core": "^8.0.0",
+        "@mantine/hooks": "^8.0.0",
         "@popperjs/core": "^2.11.6",
         "@reduxjs/toolkit": "^2.2.7",
         "@testing-library/jest-dom": "^6.4.8",
@@ -20,6 +22,7 @@
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
         "lucide-react": "^0.503.0",
+        "mantine-datatable": "^7.17.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-popper": "^2.3.0",
