--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -21,6 +21,7 @@
         "@types/node": "^22.4.0",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
+        "date-fns": "^4.1.0",
         "lucide-react": "^0.503.0",
         "mantine-datatable": "^7.17.1",
         "react": "^18.2.0",
@@ -30,6 +31,7 @@
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
         "react-toastify": "^11.0.5",
+        "recharts": "^2.15.3",
         "web-vitals": "^4.2.3",
         "yup": "^1.4.0"
     },
