--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -26,6 +26,7 @@
         "mantine-datatable": "^7.17.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^5.5.0",
         "react-popper": "^2.3.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.4.2",
